[bugfix] querier datasource, editor content and sql content overlap
**Phenomenon and reproduction steps**

none

**Root cause and solution**

root cause
- editor content is too wide

solution
- add hide/show button to sql content

**Impactions**

none

**Test method**

none

**Affected branch(es)**

- main

**Checklist**

- [ ] Dependencies update required
- [ ] Common bug (similar problem in other repo)

--- a/deepflow-querier-datasource/src/QueryEditor.css
+++ b/deepflow-querier-datasource/src/QueryEditor.css
@@ -197,8 +197,8 @@
 .sql-content {
   min-width: 120px;
   margin-left: 12px;
-  overflow: auto;
-  padding: 8px 12px 8px 6px;
+  overflow: hidden;
+  padding: 12px 6px 12px 6px;
   background: #00262f;
   border-radius: 2px;
   box-shadow: 0px 0px 1px 0 #938d8d;
